Drop the rasterising flatten step and classify compliance gate failures