@@ -7,7 +7,6 @@ import static org.mockito.Mockito.when;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -32,6 +31,7 @@ import org.springframework.mock.web.MockMultipartFile;
 import stirling.software.SPDF.model.api.security.PDFVerificationResult;
 import stirling.software.SPDF.model.api.security.ValidateComplianceRequest;
 import stirling.software.SPDF.service.VeraPDFService;
+import stirling.software.common.util.ExceptionUtils;
 
 @DisplayName("ValidateComplianceController Tests")
 @ExtendWith(MockitoExtension.class)
@@ -88,6 +88,24 @@ class ValidateComplianceControllerTest {
         return result;
     }
 
+    /** What VeraPDFService reports for a document carrying no PDF/A identification metadata. */
+    private static PDFVerificationResult noPdfaDeclarationResult() {
+        PDFVerificationResult result = new PDFVerificationResult();
+        result.setStandard("not-pdfa");
+        result.setStandardName("Not PDF/A (no PDF/A identification metadata)");
+        result.setCompliant(false);
+        result.setDeclaredPdfa(false);
+        result.addFailure(
+                new PDFVerificationResult.ValidationIssue(
+                        null,
+                        "Document does not declare PDF/A compliance in its XMP metadata.",
+                        null,
+                        "XMP pdfaid",
+                        null,
+                        null));
+        return result;
+    }
+
     private static PDFVerificationResult pdfUaResult(boolean compliant) {
         PDFVerificationResult result = new PDFVerificationResult();
         result.setStandard("ua1");
@@ -132,14 +150,30 @@ class ValidateComplianceControllerTest {
         }
 
         @Test
-        @DisplayName("Should pass through when auto finds nothing to check")
-        void testAutoWithNoResultsPassesThrough() throws Exception {
+        @DisplayName("Should pass through under auto when the document declares no standard")
+        void testAutoWithNoDeclaredStandardPassesThrough() throws Exception {
+            // veraPDF always answers, so "nothing declared" arrives as the not-pdfa placeholder
+            // rather than an empty list. Auto judges only what the document declares.
             when(veraPDFService.validatePDF(any(InputStream.class)))
-                    .thenReturn(Collections.emptyList());
+                    .thenReturn(List.of(noPdfaDeclarationResult()));
 
             ResponseEntity<ByteArrayResource> response =
                     validateComplianceController.validateCompliance(
                             request("plain.pdf", null, null));
+
+            assertEquals(HttpStatus.OK, response.getStatusCode());
+            assertArrayEquals(simplePdfBytes, response.getBody().getByteArray());
+        }
+
+        @Test
+        @DisplayName("Should ignore the not-pdfa placeholder alongside a declared standard")
+        void testAutoJudgesOnlyDeclaredStandards() throws Exception {
+            when(veraPDFService.validatePDF(any(InputStream.class)))
+                    .thenReturn(List.of(noPdfaDeclarationResult(), pdfUaResult(true)));
+
+            ResponseEntity<ByteArrayResource> response =
+                    validateComplianceController.validateCompliance(
+                            request("tagged.pdf", "auto", "fail"));
 
             assertEquals(HttpStatus.OK, response.getStatusCode());
             assertArrayEquals(simplePdfBytes, response.getBody().getByteArray());
@@ -252,22 +286,42 @@ class ValidateComplianceControllerTest {
         }
 
         @Test
+        @DisplayName("Should still fail an auto check when a declared standard is not met")
+        void testAutoFailsOnDeclaredStandard() throws Exception {
+            when(veraPDFService.validatePDF(any(InputStream.class)))
+                    .thenReturn(List.of(noPdfaDeclarationResult(), pdfUaResult(false)));
+
+            ValidateComplianceRequest request = request("tagged.pdf", "auto", "fail");
+
+            IOException exception =
+                    assertThrows(
+                            IOException.class,
+                            () -> validateComplianceController.validateCompliance(request));
+
+            assertTrue(exception.getMessage().contains("7.1-1"), exception.getMessage());
+        }
+
+        @Test
+        @DisplayName("Should carry an error code so the failure is classified, not unrecognised")
+        void testViolationCarriesErrorCode() throws Exception {
+            when(veraPDFService.validatePDF(any(InputStream.class)))
+                    .thenReturn(List.of(pdfaResult(false)));
+
+            ValidateComplianceRequest request = request("report.pdf", "pdfa", "fail");
+
+            ExceptionUtils.ComplianceNotMetException exception =
+                    assertThrows(
+                            ExceptionUtils.ComplianceNotMetException.class,
+                            () -> validateComplianceController.validateCompliance(request));
+
+            assertEquals("E074", exception.getErrorCode());
+        }
+
+        @Test
         @DisplayName("Should treat a missing PDF/A declaration as non-compliant")
         void testNoPdfaDeclarationFails() throws Exception {
-            PDFVerificationResult notPdfa = new PDFVerificationResult();
-            notPdfa.setStandard("not-pdfa");
-            notPdfa.setStandardName("Not PDF/A (no PDF/A identification metadata)");
-            notPdfa.setCompliant(false);
-            notPdfa.addFailure(
-                    new PDFVerificationResult.ValidationIssue(
-                            null,
-                            "Document does not declare PDF/A compliance in its XMP metadata.",
-                            null,
-                            "XMP pdfaid",
-                            null,
-                            null));
-
-            when(veraPDFService.validatePDF(any(InputStream.class))).thenReturn(List.of(notPdfa));
+            when(veraPDFService.validatePDF(any(InputStream.class)))
+                    .thenReturn(List.of(noPdfaDeclarationResult()));
 
             ValidateComplianceRequest request = request("report.pdf", "pdfa", "fail");
 
